--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".AlmostThereActivity"
+            android:exported="true">
+        </activity>
+
+<!--        <activity-->
+<!--            android:name=".VerifyActivity"-->
+<!--            android:exported="true">-->
+<!--        </activity>-->
+
+<!--        <activity-->
+<!--            android:name=".HomeActivity"-->
+<!--            android:exported="true">-->
+<!--        </activity>-->
     </application>
 
 </manifest>
