--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,15 +29,15 @@
             android:exported="true">
         </activity>
 
-<!--        <activity-->
-<!--            android:name=".VerifyActivity"-->
-<!--            android:exported="true">-->
-<!--        </activity>-->
+        <activity
+            android:name=".VerifyActivity"
+            android:exported="true">
+        </activity>
 
-<!--        <activity-->
-<!--            android:name=".HomeActivity"-->
-<!--            android:exported="true">-->
-<!--        </activity>-->
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
